--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 
     <div class="search-container">
-        <form action="https://getform.io/f/bnlknzmb" method="POST">
+        <form action="https://formspree.io/f/xwvvekzn" method="POST">
             
             <!-- User input -->
             <input 
